--- a/views/layout/menu.jade
+++ b/views/layout/menu.jade
@@ -17,7 +17,7 @@ nav.navbar-default.navbar-static-side(role='navigation')
           span.fa.arrow
         ul.nav.nav-second-level.collapse
           li
-            a(href='/courses/create') 新建
+            a(href='/courses/new') 新建
           li
             a(href='/courses/list') 查看列表
       li
