--- a/views/courses/list.jade
+++ b/views/courses/list.jade
@@ -1,99 +1,155 @@
 extends ../layout/layout.bootstrap
 
 block content
-  .row
-    .col-sm-12
-      table(
-            id='tableid',
-            data-toggle='table',
-            data-smart-display ="false",
-            data-click-to-select="false",
-            data-pagination='true', 
-            data-side-pagination='server', 
-            data-page-list='[1,5, 10, 20, 50, 100, 200]', 
-            data-response-handler="responseHandler",
-            data-classes="table table-hover table-no-bordered table-condensed table-responsive ",
-            data-search='false',
-            data-show-export='true',
-            data-show-pagination-switch ="false",
-            data-show-footer = "false",
-            data-show-refresh="true"
-            data-show-toggle="true"
-            data-show-columns="true"
-            data-striped="true",
-            data-detail-view="true"
-            data-detail-formatter="detailFormatter",
-            data-minimum-count-columns="2",
-            data-height='600')
-        thead
-          tr 
-            th(data-field='state',data-radio='true')　单选
-            th(data-field='id',data-align='center',data-formatter='showSerialNum')　序号
-            th(data-field='bookname', data-align='center' ) 书名
-            th(data-field='author',  data-align='center' )  作者     
-            th(data-field='publish',  data-align='center')  出版社
-            th(data-field='purchase',  data-align='center'
-            data-formatter='purchaseFormatter' data-events='purchaseEvents')  操作
-  script.
-    $(function(){
-      var $obj = $('#tableid');
-      var url = '/assets/json/book.json';
-      var params = function queryParams (params) {
-                    return {
-                      limit: params.limit,  
-                      offset: params.offset
-                    }
-                  }
-      getTables($obj,url,'get',params);
-    });
+  .row.wrapper.border-bottom.white-bg.page-heading
+    .col-lg-12
+      h2 课程管理
+      |         
+      ol.breadcrumb
+        li
+          a(href='/courses/') 课程管理
+        li
+          a(href='/courses/new') 创建课程
+  .wrapper.wrapper-content.animated.fadeInRight
+    .row
+      .col-sm-12
+        table(
+              id='tableid',
+              data-toggle='table',
+              data-smart-display ="false",
+              data-click-to-select="false",
+              data-pagination='true', 
+              data-side-pagination='server', 
+              data-page-list='[1,5, 10, 20, 50, 100, 200]', 
+              data-response-handler="responseHandler",
+              data-classes="table table-hover table-no-bordered table-condensed table-responsive ",
+              data-search='false',
+              data-show-export='true',
+              data-show-pagination-switch ="false",
+              data-show-footer = "false",
+              data-show-refresh="true"
+              data-show-toggle="true"
+              data-show-columns="true"
+              data-striped="true",
+              data-detail-view="true"
+              data-detail-formatter="detailFormatter",
+              data-minimum-count-columns="2",
+              data-height='600')
+          thead
+            tr 
+              // th(data-field='state',data-radio='true')　单选
+              th(data-field='id',data-align='center',data-formatter='showSerialNum')　序号
+              th(data-field='name', data-align='center' ) 课程名称
+              th(data-field='sales_num',  data-align='center' )  销量   
+              th(data-field='price',  data-align='center')  价格
+              th(data-field='picture',  data-align='center', data-formatter='showImage')  头图
+              th(data-field='recommend',  data-align='center')  是否推荐
+              th(data-field='purchase',  data-align='center' data-formatter='purchaseFormatter' data-events='operationEvent') 操作
+    script.
+      $(function(){
+        var $obj = $('#tableid');
+        var url = '/api/courses/';
 
-    //发送请求获取数据
-    function getTables(obj,url,method,params) {
-      $(obj).bootstrapTable('destroy');
-      $(obj).bootstrapTable({
-        url:url,
-        method:method,
-        queryParams:params
-        });
-    }
-    //返回数据处理
-    function responseHandler(res){
-      return res
-    }
-    //样式的调整
-    function radioStyle(){
-      return {
-        css:{
-            'min-width' : '35px'
+        var params = function queryParams (params) {
+          return {
+            limit: params.limit,  
+            offset: params.offset
           }
         }
-    }
-    //获取表格序号
-    function showSerialNum(value, row, index){
-      return index + 1;
-    }
+        getTables($obj, url, 'get', params);
+      });
 
-    //事件处理
-
-    //详情显示
-    function detailFormatter(){
-    return '书本简介';
-    }
-
-    function purchaseFormatter(){
-      return [
-        '<a class="edit" href="javascript:void(0)" title="Edit">',
-        '收藏',
-        '</a>'].join('');
-    }
-
-    window.purchaseEvents = {
-      'click .edit' : function(e, value, row, index){
-        alert('已收藏！');
+      //发送请求获取数据
+      function getTables(obj,url,method,params) {
+        $(obj).bootstrapTable('destroy');
+        $(obj).bootstrapTable({
+          url:url,
+          method:method,
+          queryParams:params
+          });
       }
-    }
-    //开始时间
-    function getFormatTime (value, row, index) {
-      var time = moment(row.data).format('YYYY-MM-DD HH:mm');
-      return time
-    }
+      //返回数据处理
+      function responseHandler(res){
+        return res
+      }
+      //样式的调整
+      function radioStyle(){
+        return {
+          css:{
+              'min-width' : '35px'
+          }
+        }
+      }
+      //获取表格序号
+      function showSerialNum(value, row, index){
+        return index + 1;
+      }
+
+      //事件处理
+
+      //详情显示
+      function detailFormatter(index, row, element){
+        console.log(row)
+        if (row.prompt) {
+          return row.prompt;
+        }
+        return "暂无图文说明";
+      }
+      
+      function showImage(index, row, element){
+        console.log(row)
+        if (row.picture) {
+          return "<img width='60px' src='" + row.picture +"'></img>"
+        }
+        return "暂无图文说明";
+      }
+      
+
+      function purchaseFormatter(){
+        return [
+          '<a class="action_delete" href="javascript:void(0)" title="Edit">',
+          '删除',
+          '</a>',
+          '|',
+          '<a class="action_preview" href="javascript:void(0)" title="Edit">',
+          '预览',
+          '</a>'].join('');
+      }
+
+      window.operationEvent = {
+        'click .action_delete' : function(e, value, row, index){
+          console.log(row)
+          
+          $.ajax({
+            url: '/api/courses/' + row._id ,
+            type: 'DELETE',
+            success: function(result) {
+                // Do something with the result
+              $("#tableid").bootstrapTable('refresh');
+            }
+          });
+        },
+        
+        'click .action_preview' : function(e, value, row, index){
+          console.log(row)
+          // var i = row.recommend == false ? 0 : 1
+          console.log('http://127.0.0.1:3000/courses/' +  row._id );
+          
+          window.location.href = 'http://127.0.0.1:3000/courses/' +  row._id 
+        }
+      }
+      
+      //开始时间
+      function getFormatTime (value, row, index) {
+        var time = moment(row.data).format('YYYY-MM-DD HH:mm');
+        return time
+      }
+      
+      function getQueryStringByName(name){
+        var result = decodeURI(location.search).match(new RegExp("[\?\&]" + name+ "=([^\&]+)","i"));
+        if(result == null || result.length < 1){
+          return "";
+        }
+        return decodeURI(result[1]);
+      }
+    
